--- a/index.html
+++ b/index.html
@@ -775,6 +775,13 @@
    <td>..............xD.................</td>
    <td><a href="https://github.com/aryamaan98">Aryamaan</a></td>
   </tr>
+
+<tr>
+   <th scope="row">92</th>
+   <td>Kunal Gupta</td>
+   <td>Hello World!!</td>
+   <td><a href="https://github.com/kunal0287">kunal0287</a></td>
+  </tr>
         </tbody>
       </table>
     </div>
